--- a/bps2022/src/components/wizards/transaction/frame.module.css
+++ b/bps2022/src/components/wizards/transaction/frame.module.css
@@ -25,11 +25,11 @@
 }
 .navigation-left {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
 }
 .navigation-right {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     column-gap: 0.25rem;
 }
 .navigation-button {
