--- a/bps2022/src/components/wizards/transaction/components/selector/selector.module.css
+++ b/bps2022/src/components/wizards/transaction/components/selector/selector.module.css
@@ -1,6 +1,6 @@
 .page {
     display: grid;
-    grid-template-rows: 5rem 5rem 5rem 5rem 5rem;
+    grid-template-rows: 5rem 5rem 5rem 5rem 5rem 5rem;
     grid-template-columns: 1fr 1fr;
     width: 100%;
     height: 100%;
@@ -56,6 +56,16 @@
     justify-content: flex-start;
     align-items: center;
 }
+.origin-coffer-account {
+    grid-row-start: 6;
+    grid-row-end: 6;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
 .target-bank-account-external {
     grid-row-start: 1;
     grid-row-end: 1;
@@ -99,6 +109,16 @@
 .target-external-account {
     grid-row-start: 5;
     grid-row-end: 5;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+.target-coffer-account {
+    grid-row-start: 6;
+    grid-row-end: 6;
     grid-column-start: 2;
     grid-column-end: 2;
     display: flex;
