--- a/bps2022/src/components/wizards/transaction/components/selector/selector.module.css
+++ b/bps2022/src/components/wizards/transaction/components/selector/selector.module.css
@@ -1,6 +1,6 @@
 .page {
     display: grid;
-    grid-template-rows: 5rem 5rem 5rem 5rem 5rem 5rem;
+    grid-template-rows: 5rem 5rem 5rem 5rem 5rem 5rem 5rem;
     grid-template-columns: 1fr 1fr;
     width: 100%;
     height: 100%;
@@ -121,6 +121,26 @@
     grid-row-end: 6;
     grid-column-start: 2;
     grid-column-end: 2;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+.income {
+    grid-row-start: 7;
+    grid-row-end: 7;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+.expenses {
+    grid-row-start: 7;
+    grid-row-end: 7;
+    grid-column-start: 1;
+    grid-column-end: 1;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
