--- a/bps2022/src/components/wizards/transaction/components/narrowing/narrowing.module.css
+++ b/bps2022/src/components/wizards/transaction/components/narrowing/narrowing.module.css
@@ -31,14 +31,22 @@
     padding-bottom: 0.5rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
+    font-size: 1.25rem;
 }
 .transactions-item-current {
     background-color: lightblue !important;
 }
 .transaction-item-marker {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     height: 2rem;
     width: 2rem;
     background-color: #cfcfcf;
+    height: 4.25rem;
+    width: 4.25rem;
+    font-size: 1.25rem;
     border-radius: 50%;
 }
 .transactions-list {
