--- a/bps2022/src/components/wizards/transaction/frame.module.css
+++ b/bps2022/src/components/wizards/transaction/frame.module.css
@@ -1,24 +1,37 @@
 .frame {
     display: grid;
     grid-template-rows: 4rem calc(100% - 8rem) 4rem;
-    grid-template-columns: auto;
+    grid-template-columns: 7rem 1fr;
     height: 100%;
 }
 .header {
     grid-row-start: 1;
     grid-row-end: 1;
-    font-family: 'Roboto', sans-serif;
+    grid-column-start: 2;
+    grid-column-end: span 2;
+    font-family: 'Roboto';
     font-size: 2.5rem;
+}
+.roadmap {
+    grid-row-start: 1;
+    grid-row-end: span 3;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    margin-right: 1.5rem;
 }
 .pages {
     grid-row-start: 2;
     grid-row-end: 2;
+    grid-column-start: 2;
+    grid-column-end: 2;
     width: 100%;
     height: 100%;
 }
 .navigation {
     grid-row-start: 3;
     grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 2;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
