--- a/bps2022/src/components/wizards/accounts/bankaccount/components/registration.module.css
+++ b/bps2022/src/components/wizards/accounts/bankaccount/components/registration.module.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     padding-bottom: 2rem;
-    row-gap: 0.25rem;   
+    row-gap: 0.25rem;
 }
 .header {
     grid-row-start: 1;
@@ -207,6 +207,6 @@
     margin-left: 0.5rem;
     color: #777;
 }
-.organizations-not-inlist {
+.organizations-disabled {
     color: #ececec;
 }
