--- a/bps2022/src/components/wizards/organization/components/registration.module.css
+++ b/bps2022/src/components/wizards/organization/components/registration.module.css
@@ -1,6 +1,6 @@
 .page {
     display: grid;
-    grid-template-rows: auto auto auto auto auto auto 1fr;
+    grid-template-rows: auto auto auto auto auto auto auto 1fr;
     grid-template-columns: auto 1fr;
     width: 100%;
     height: 100%;
@@ -85,17 +85,45 @@
     width: 100%;
     margin-right: 0.5rem;
 }
-.clients-list-search {
+.organizations-belongs-client {
     grid-row-start: 6;
     grid-row-end: 6;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    font-family: 'Roboto';
+    font-size: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    height: 2.5rem
+}
+/* https://www.kallmanation.com/styling-a-checkbox-with-only-css */
+.organizations-belongs-client input {
+    display: inline-block;
+    height: 1.25rem;
+    width: 1.25rem;
+}
+.organizations-belongs-client div {
+    font-family: 'Roboto';
+    font-size: 1rem;
+    margin-left: 0.5rem;
+    color: #777;
+}
+.organizations-belongs-client {
+    color: #ececec;
+}
+.clients-list-search {
+    grid-row-start: 7;
+    grid-row-end: 7;
     grid-column-start: 2;
     grid-column-end: 2;
 }
 .clients-list-label {
     display: flex;
     align-items: center;
-    grid-row-start: 6;
-    grid-row-end: span 7;
+    grid-row-start: 7;
+    grid-row-end: span 8;
     grid-column-start: 1;
     grid-column-end: 1;
     font-size: 1rem;
@@ -115,8 +143,8 @@
     background-color: lightblue !important;
 }
 .clients-list {
-    grid-row-start: 7;
-    grid-row-end: 7;
+    grid-row-start: 8;
+    grid-row-end: 8;
     grid-column-start: 2;
     grid-column-end: 2;
     font-size: 1rem;
