--- a/bps2022/src/components/wizards/transaction/components/personalaccount/personalaccount.module.css
+++ b/bps2022/src/components/wizards/transaction/components/personalaccount/personalaccount.module.css
@@ -1,15 +1,17 @@
 .page {
     display: grid;
-    grid-template-rows: auto auto 1fr auto;
+    grid-template-rows: auto auto 1fr auto 10rem auto 7rem;
     grid-template-columns: 1fr;
     width: 100%;
     height: 100%;
     padding-bottom: 2rem;   
+    font-family: 'Roboto';
+    font-size: 1rem;
 }
 .header {
     grid-row-start: 1;
     grid-row-end: 1;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 1.5rem;
     height: fit-content;
 }
@@ -24,10 +26,11 @@
     align-items: center;
 }
 .search input {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 1rem;
     padding: 0.25rem;
     height: 1.75rem;
+    border-radius: 0;
 }
 .search input:focus {
     outline-width: 0;
@@ -35,18 +38,62 @@
 .search div {
     background-color:lightskyblue;
     height: 1.75rem;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
     padding-left: 0.25rem;
     padding-right: 0.25rem;
     border: 1px solid;
-    border-left: none;
+    border-right: none;
     font-size: 1.25rem;
     color: #777;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+}
+.clients-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 1rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+}
+.clients-item-current {
+    background-color: lightblue !important;
+}
+.clients-list {
+    grid-row-start: 3;
+    grid-row-end: 3;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    border: 1px solid #ececec
+}
+.clients-item:nth-child(even) {
+    background-color: #fafafa;
+}
+.clients-not-in-list {
+    grid-row-start: 4;
+    grid-row-end: 4;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 2rem;
+    height: 2rem;
+}
+/* https://www.kallmanation.com/styling-a-checkbox-with-only-css */
+.clients-not-in-list input {
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+}
+.clients-not-in-list div {
+    font-family: 'Roboto';
+    font-size: 1rem;
+    margin-left: 0.5rem;
+    color: #777;
 }
 .accounts-item {
     display: flex;
@@ -61,10 +108,8 @@
     background-color: lightblue !important;
 }
 .accounts-list {
-    grid-row-start: 3;
-    grid-row-end: 3;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1rem;
+    grid-row-start: 5;
+    grid-row-end: 5;
     overflow-y: scroll;
     overflow-x: hidden;
     border: 1px solid #ececec
@@ -73,26 +118,31 @@
     background-color: #fafafa;
 }
 .accounts-not-in-list {
-    grid-row-start: 4;
-    grid-row-end: 4;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1rem;
+    grid-row-start: 6;
+    grid-row-end: 6;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    padding-left: 2.5rem;
-    height: 2.5rem;
+    padding-left: 2rem;
+    height: 2rem;
 }
 /* https://www.kallmanation.com/styling-a-checkbox-with-only-css */
 .accounts-not-in-list input {
     display: inline-block;
-    height: 1.25rem;
-    width: 1.25rem;
+    height: 1rem;
+    width: 1rem;
 }
 .accounts-not-in-list div {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.25rem;
     margin-left: 0.5rem;
     color: #777;
+}
+.list-disabled {
+    color: #ececec !important;
+}
+.accounts-name {
+    grid-row-start: 7;
+    grid-row-end: 7;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
 }
