--- a/bps2022/src/components/wizards/transaction/components/roadmap/roadmap.module.css
+++ b/bps2022/src/components/wizards/transaction/components/roadmap/roadmap.module.css
@@ -1,6 +1,17 @@
 .main {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     width: 100%;
     height: 100%;
+}
+.element {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.connector {
+    width: 2px;
+    background: #ececec;
+    height: 1rem;
 }
