--- a/bps2022/src/components/wizards/transaction/components/selector/selector.module.css
+++ b/bps2022/src/components/wizards/transaction/components/selector/selector.module.css
@@ -1,10 +1,10 @@
 .page {
     display: grid;
-    grid-template-rows: 5rem 5rem 5rem 5rem 5rem 5rem 5rem;
+    grid-template-rows: 5rem 5rem 5rem 5rem 5rem 5rem 5rem 1fr;
     grid-template-columns: 1fr 1fr;
     width: 100%;
     height: 100%;
-    margin-top: 2rem;
+    overflow: hidden;
 }
 .origin-bank-account-external {
     grid-row-start: 1;
@@ -15,6 +15,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .origin-bank-account-internal {
     grid-row-start: 2;
@@ -25,6 +26,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .origin-cash-account {
     grid-row-start: 3;
@@ -35,6 +37,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .origin-personal-account {
     grid-row-start: 4;
@@ -45,6 +48,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .origin-external-account {
     grid-row-start: 5;
@@ -55,6 +59,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .origin-coffer-account {
     grid-row-start: 6;
@@ -65,6 +70,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .target-bank-account-external {
     grid-row-start: 1;
@@ -75,6 +81,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .target-bank-account-internal {
     grid-row-start: 2;
@@ -85,6 +92,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .target-cash-account {
     grid-row-start: 3;
@@ -95,6 +103,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .target-personal-account {
     grid-row-start: 4;
@@ -105,6 +114,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .target-external-account {
     grid-row-start: 5;
@@ -115,6 +125,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .target-coffer-account {
     grid-row-start: 6;
@@ -125,6 +136,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .income {
     grid-row-start: 7;
@@ -135,6 +147,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .expenses {
     grid-row-start: 7;
@@ -145,6 +158,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 .marker {
     display: flex;
@@ -155,7 +169,10 @@
     background-color: #cfcfcf;
     height: 4.25rem;
     width: 4.25rem;
+    min-height: 4.25rem;
+    min-width: 4.25rem;
     font-size: 1.25rem;
+    overflow: hidden;
 }
 .marker-active {
     background-color: lightpink !important;
@@ -170,4 +187,5 @@
     font-family: 'Roboto', sans-serif;
     font-size: 1.25rem;
     margin-left: 0.5rem;
+    overflow: hidden;
 }
