--- a/bps2022/src/index.css
+++ b/bps2022/src/index.css
@@ -8,7 +8,7 @@
 
 html, body {
   height: 100vh;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto';
 }
 body {
   height: calc(100vh - 20px);
