Sums Wizard Page developed

--- a/bps2022/src/components/wizards/transaction/components/externalaccount/externalaccount.module.css
+++ b/bps2022/src/components/wizards/transaction/components/externalaccount/externalaccount.module.css
@@ -5,51 +5,31 @@
     width: 100%;
     height: 100%;
     padding-bottom: 2rem;   
+    row-gap: 0.25rem;
 }
 .header {
     grid-row-start: 1;
     grid-row-end: 1;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 1.5rem;
     height: fit-content;
+    margin-bottom: 1rem;
 }
 .search {
     grid-row-start: 2;
     grid-row-end: 2;
     height: 2.5rem;
-    margin-top: 1.25rem;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    padding-left: 2.5rem;
 }
 .search input {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 1rem;
     padding: 0.25rem;
     height: 1.75rem;
 }
-.search input:focus {
-    outline-width: 0;
-}
-.search div {
-    background-color:lightskyblue;
-    height: 1.75rem;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
-    border: 1px solid;
-    border-left: none;
-    font-size: 1.25rem;
-    color: #777;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-}
-/* accounts */
 .accounts-item {
     display: flex;
     flex-direction: row;
@@ -65,11 +45,13 @@
 .accounts-list {
     grid-row-start: 4;
     grid-row-end: 4;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 1rem;
     overflow-y: scroll;
     overflow-x: hidden;
-    border: 1px solid #ececec
+    border: 1px solid #ececec;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 .accounts-item:nth-child(even) {
     background-color: #fafafa;
@@ -77,7 +59,7 @@
 .accounts-not-in-list {
     grid-row-start: 5;
     grid-row-end: 5;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 1rem;
     display: flex;
     flex-direction: row;
@@ -93,13 +75,11 @@
     width: 1.25rem;
 }
 .accounts-not-in-list div {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 1.25rem;
     margin-left: 0.5rem;
     color: #777;
 }
-
-/* owners */
 .owners-item {
     display: flex;
     flex-direction: row;
@@ -115,11 +95,13 @@
 .owners-list {
     grid-row-start: 3;
     grid-row-end: 3;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 1rem;
     overflow-y: scroll;
     overflow-x: hidden;
-    border: 1px solid #ececec
+    border: 1px solid #ececec;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 .owners-item:nth-child(even) {
     background-color: #fafafa;
