--- a/bps2022/src/components/wizards/transaction/components/cofferaccount/cofferaccount.module.css
+++ b/bps2022/src/components/wizards/transaction/components/cofferaccount/cofferaccount.module.css
@@ -30,25 +30,6 @@
     padding: 0.25rem;
     height: 1.75rem;
 }
-.search input:focus {
-    outline-width: 0;
-}
-.search div {
-    background-color:lightskyblue;
-    height: 1.75rem;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
-    border: 1px solid;
-    border-left: none;
-    font-size: 1.25rem;
-    color: #777;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-}
 .coffers-item {
     display: flex;
     flex-direction: row;
@@ -70,6 +51,7 @@
     overflow-x: hidden;
     border: 1px solid #ececec;
     margin-top: 0;
+    margin-bottom: 0;
 }
 .coffers-item:nth-child(even) {
     background-color: #fafafa;
