--- a/bps2022/src/components/wizards/transaction/components/overdraft/overdraft.module.css
+++ b/bps2022/src/components/wizards/transaction/components/overdraft/overdraft.module.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     padding-bottom: 2rem;
-    row-gap: 0.25rem; 
+    row-gap: 0.25rem;
 }
 .header {
     grid-row-start: 1;
@@ -30,25 +30,6 @@
     padding: 0.25rem;
     height: 1.75rem;
 }
-.search input:focus {
-    outline-width: 0;
-}
-.search div {
-    background-color:lightskyblue;
-    height: 1.75rem;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
-    border: 1px solid;
-    border-left: none;
-    font-size: 1.25rem;
-    color: #777;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-}
 .overdrafts-item {
     display: flex;
     flex-direction: row;
@@ -67,6 +48,7 @@
     justify-content: flex-start;
     align-items: center;
     width: 3.5rem;
+    min-width: 3.5rem;
 }
 .overdrafts-item-limit {
     display: flex;
@@ -74,6 +56,7 @@
     justify-content: flex-end;
     align-items: center;
     width: 7rem;
+    min-width: 7rem;
     font-family: 'Roboto';
     font-size: 1.15rem;
 }
@@ -83,6 +66,7 @@
     justify-content: center;
     align-items: flex-end;
     width: 11rem;
+    min-width: 11rem;
 }
 .overdrafts-item-accounts-primary {
     font-family: 'Roboto';
