--- a/bps2022/src/components/wizards/transaction/components/servicecharge/servicecharge.module.css
+++ b/bps2022/src/components/wizards/transaction/components/servicecharge/servicecharge.module.css
@@ -16,6 +16,7 @@
     font-family: 'Roboto';
     font-size: 1.5rem;
     margin-bottom: 2rem;
+    overflow: hidden;
 }
 .element {
     display: flex;
@@ -23,6 +24,8 @@
     font-family: 'Roboto';
     font-size: 1rem;
     width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
 }
 .enterprise-external-income-label {
     grid-row-start: 2;
