Added Automaton charges in Charges page

--- a/bps2022/src/components/wizards/transaction/frame.module.css
+++ b/bps2022/src/components/wizards/transaction/frame.module.css
@@ -1,6 +1,6 @@
 .frame {
     display: grid;
-    grid-template-rows: 4rem 1fr 4rem;
+    grid-template-rows: 4rem calc(100% - 8rem) 4rem;
     grid-template-columns: 7rem 1fr;
     height: 100%;
 }
