--- a/bps2022/src/components/wizards/transaction/components/bankaccount/bankaccount.module.css
+++ b/bps2022/src/components/wizards/transaction/components/bankaccount/bankaccount.module.css
@@ -2,10 +2,10 @@
     display: grid;
     grid-template-rows: auto auto 1fr auto;
     grid-template-columns: 1fr;
+    row-gap: 0.25rem;
     width: 100%;
     height: 100%;
-    padding-bottom: 2rem;   
-    row-gap: 0.25rem;
+    padding-bottom: 1rem;   
 }
 .header {
     grid-row-start: 1;
@@ -38,6 +38,20 @@
     column-gap: 1rem;
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
+}
+.account-item-account {
+    min-width: 11rem;
+}
+.account-item-client {
+    min-width: 7rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.account-item-organization {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .accounts-item-current {
     background-color: lightblue !important;
