--- a/bps2022/src/components/wizards/transaction/components/confirmation/confirmation.module.css
+++ b/bps2022/src/components/wizards/transaction/components/confirmation/confirmation.module.css
@@ -1,49 +1,65 @@
 .page {
     display: grid;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto 1fr auto auto;
     grid-template-columns: 1fr;
+    row-gap: 0.25rem;
     width: 100%;
     height: 100%;
-    padding-bottom: 2rem;   
+    padding-bottom: 1rem;
 }
 .header {
     grid-row-start: 1;
     grid-row-end: 1;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 1.5rem;
     height: fit-content;
 }
 .parameters {
     grid-row-start: 2;
     grid-row-end: 2;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 1rem;
     overflow-y: scroll;
     overflow-x: hidden;
     border: 1px solid #ececec;
-    margin-top: 2rem;
-    margin-bottom: 1.25rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 .confirmation {
     grid-row-start: 3;
     grid-row-end: 3;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1rem;
     display: flex;
-    flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    padding-left: 2.5rem;
     height: 2.5rem;
 }
 .confirmation input {
     display: inline-block;
-    height: 1.25rem;
-    width: 1.25rem;
+    height: 1rem;
+    width: 1rem;
 }
 .confirmation div {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.25rem;
+    font-family: 'Roboto';
+    font-size: 1rem;
+    margin-left: 0.5rem;
+    color: #777;
+}
+.autocomplete {
+    grid-row-start: 4;
+    grid-row-end: 4;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 2.5rem;
+}
+.autocomplete input {
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+}
+.autocomplete div {
+    font-family: 'Roboto';
+    font-size: 1rem;
     margin-left: 0.5rem;
     color: #777;
 }
