--- a/bps2022/src/components/wizards/transaction/components/narrowing/narrowing.module.css
+++ b/bps2022/src/components/wizards/transaction/components/narrowing/narrowing.module.css
@@ -4,12 +4,12 @@
     grid-template-columns: 1fr;
     width: 100%;
     height: 100%;
-    padding-bottom: 2rem;   
+    padding-bottom: 1rem;   
 }
 .header {
     grid-row-start: 1;
     grid-row-end: 1;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 1.5rem;
     height: fit-content;
 }
@@ -50,7 +50,7 @@
 .transactions-list {
     grid-row-start: 2;
     grid-row-end: 2;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 1rem;
     overflow-y: hidden;
     overflow-x: hidden;
