--- a/bps2022/src/components/wizards/transaction/frame.module.css
+++ b/bps2022/src/components/wizards/transaction/frame.module.css
@@ -27,7 +27,7 @@
     grid-column-end: 2;
     width: 100%;
     height: 100%;
-    margin-top: 1rem;
+    padding-top: 1rem;
 }
 .navigation {
     grid-row-start: 3;
@@ -36,11 +36,16 @@
     grid-column-end: 2;
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
+    align-items: center;
 }
 .navigation-left {
     display: flex;
     justify-content: flex-start;
+}
+.navigation-center {
+    display: flex;
+    justify-content: center;
+    width: 100%
 }
 .navigation-right {
     display: flex;
